--- a/threetierapp/playbooks/provision.yml
+++ b/threetierapp/playbooks/provision.yml
@@ -4,7 +4,7 @@
   connection: local
   gather_facts: false
   vars:
-    guid: "{{ lookup('env','GUID') }}"
+    guid: fee3
   tasks:
     - name: Include Instance variables
       include_vars: instances_vars.yml
